Bug 909525 - Prevent the scroll offset being picked up from the wrong element in some cases. r=botond, r=tn, a=koi+

In some cases pages from the bfcache can get displayed to the screen without going through layout. In these cases, the element associated with the ROOT_SCROLL_ID may be from a different document, so it is inadvisable to use that element's scroll position as if it were the current document's scroll position. Doing so can lead to incorrect behaviour. This patch fixes such a case.